publish/EDU-SLURM/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "NumberOfComputeNodes":{
            "metadata": {
                "description": "Specify the number of compute nodes in the cluster, in addition to the scheduling node."
            },
            "type": "string",
            "defaultValue": "2",
            "allowedValues": ["1","2","3","4"]
        },
        "SizeOfWorkerNodes": {
            "type": "string",
            "defaultValue": "2-CPUs,8GB-RAM",
            "allowedValues": [
                "2-CPUs,8GB-RAM",
                "4-CPUs,16GB-RAM"
            ],
            "metadata": {
            "description": "Select the size of the virtual machines deployed as worker nodes."
            }
        }
    },
    "variables": {
        "installScriptURL": "https://raw.githubusercontent.com/fayora/mydev-solution-collections/main/publish/SLURM/cyclecloud_app_server_install.py",
        "cycleCloudVersion": "8.4.0-3122",
        "slurmVersion": "23.02.0-1",
        "computeApiVersion": "2019-03-01",
        "resourceLocation": "[resourceGroup().location]",
        "uniqueHash": "[uniqueString(deployment().properties.templateHash, deployment().name)]",
        "cycleName": "[concat('cycleapp', take(variables('uniqueHash'),5), toLower(take(uniqueString(subscription().subscriptionId, deployment().name), 5)))]",
        "username": "hpcadmin",
        "password": "[concat(variables('uniqueHash'),'C12!')]",
        "cycleNic": "[concat('nic', variables('cycleName'))]",
        "cycleNsgName": "[concat('nsg', variables('cycleName'))]",
        "cycleIPName": "[concat('ip', variables('cycleName'))]",
        "cycleSSHKeyName": "[concat('sshkey', variables('cycleName'))]",
        "cycleSubnet": "cycle",
        "cyclecloudVmSize": "Standard_B4ms",
        "cyclecloudVmStorage": "Premium_LRS",
        "azureSovereignCloud": "public",
        "vnetName": "[concat('vnet', variables('cycleName'))]",
        "storageAccountName": "[concat('sto', variables('cycleName'))]",
        "storageAccountType": "Standard_LRS",
        "FQDN": "[concat(variables('cycleName'))]",
        "WorkerSize": {
            "2-CPUs,8GB-RAM": "Standard_D2as_v5",
            "4-CPUs,16GB-RAM": "Standard_D4as_v5"
        },
        "workerVMSize": "[variables('WorkerSize')[parameters('SizeOfWorkerNodes')]]",
        "NumberOfWorkerNodes": "[int(parameters('NumberOfComputeNodes'))]",
        "CoreCount": {
            "2-CPUs,8GB-RAM": 2,
            "4-CPUs,16GB-RAM": 4
        },
        "workerVMCoreCount": "[variables('CoreCount')[parameters('SizeOfWorkerNodes')]]",
        "clusterOS": "microsoft-dsvm:ubuntu-hpc:2004:latest",
        "clusterOSImage": "[variables('clusterOS')]",
        "networkApiVersion": "2017-06-01",
        "contributor": "[concat('/subscriptions/', subscription().subscriptionId, '/providers/Microsoft.Authorization/roleDefinitions/', 'b24988ac-6180-42a0-ab88-20f7382dd24c')]" 
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2022-09-01",
            "name": "[variables('storageAccountName')]",
            "location": "[variables('resourceLocation')]",
            "sku": {
                "name": "[variables('storageAccountType')]"
            },
            "kind": "StorageV2",
            "properties": {
                "allowBlobPublicAccess": false
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('vnetName')]",
            "apiVersion": "[variables('networkApiVersion')]",
            "location": "[variables('resourceLocation')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.0.0/20"
                    ]
                },
                "subnets": [
                    {
                        "name": "cycle",
                        "properties": {
                            "addressPrefix": "10.0.1.0/28"
                        }
                    },
                    {
                        "name": "user",
                        "properties": {
                            "addressPrefix": "10.0.3.0/24"
                        }
                    },
                    {
                        "name": "compute",
                        "properties": {
                            "addressPrefix": "10.0.4.0/22"
                        }
                    }
                ],
                "virtualNetworkPeerings": []
            },
            "dependsOn": []
        },        
        {
        "type": "Microsoft.Network/networkSecurityGroups",
        "name": "[variables('cycleNsgName')]",
        "apiVersion": "[variables('networkApiVersion')]",
        "location": "[variables('resourceLocation')]",
        "properties": {
            "securityRules": [
            {
                "name": "AllowSecuredCyclePortalInBound",
                "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 2000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
                }
            },
            {
                "name": "AllowCyclePortalInBound",
                "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "Internet",
                "destinationAddressPrefix": "VirtualNetwork",
                "access": "Allow",
                "priority": 1000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
                }
            },
            {
                "name": "default-allow-ssh",
                "properties": {
                "protocol": "Tcp",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 3000,
                "direction": "Inbound",
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
                }
            }
            ]
        },
        "dependsOn": []
        },
        {
        "type": "Microsoft.Network/publicIPAddresses",
        "name": "[variables('cycleIPName')]",
        "apiVersion": "[variables('networkApiVersion')]",
        "location": "[variables('resourceLocation')]",
        "properties": {
            "publicIPAddressVersion": "IPv4",
            "publicIPAllocationMethod": "Static",
            "idleTimeoutInMinutes": 4,
            "dnsSettings": {
            "domainNameLabel": "[variables('FQDN')]"
            }
        },
        "dependsOn": []
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[variables('networkApiVersion')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('cycleNsgName'))]",
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('cycleIPName'))]"
            ],
            "location": "[variables('resourceLocation')]",
            "name": "[variables('cycleNic')]",
            "properties": {
                "dnsSettings": {},
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "primary": true,
                            "privateIPAddressVersion": "IPv4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('cycleIPName'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('cycleSubnet'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('cycleNsgName'))]"
                },
                "primary": true
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[variables('computeApiVersion')]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', variables('cycleNic'))]"
            ],
            "location": "[variables('resourceLocation')]",
            "name": "[variables('cycleName')]",
            "identity": {
                "type": "systemAssigned"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('cyclecloudVmSize')]"
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('cycleNic'))]"
                        }
                    ]
                },
                "osProfile": {
                    "adminUsername": "[variables('username')]",
                    "adminPassword": "[variables('password')]",
                    "computerName": "[variables('cycleName')]",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false
                    },
                    "secrets": []
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "0001-com-ubuntu-server-focal",
                        "sku": "20_04-lts-gen2",
                        "version": "latest"
                    },
                    "osDisk": {
                        "caching": "ReadWrite",
                        "createOption": "FromImage",
                        "managedDisk": {
                            "storageAccountType": "[variables('cyclecloudVmStorage')]"
                        },
                        "osType": "Linux"
                    }
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "apiVersion": "2020-12-01",
                    "dependsOn": [
                        "[variables('cycleName')]"
                    ],
                    "location": "[variables('resourceLocation')]",
                    "name": "InstallCycle",
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.1",
                        "autoUpgradeMinorVersion": true,
                        "protectedSettings": {
                            "commandToExecute": "[concat('sudo add-apt-repository -y ppa:deadsnakes/ppa && sudo apt-get update && sudo apt-get install -y python3.9 && sudo python3.9 cyclecloud_app_server_install.py ', '--acceptTerms', ' --useManagedIdentity', ' --azureSovereignCloud ', '\"', variables('azureSovereignCloud'), '\"', ' --username ', '\"', variables('username'), '\"', ' --password ', '''', base64(variables('password')), '''', ' --hostname ', '\"', reference(variables('cycleIPName')) [...]
                            "fileUris": ["[variables('installScriptURL')]"]
                        }
                    }
                }
            ]
        },
        {
            "type": "Microsoft.Authorization/roleAssignments",
            "apiVersion": "2018-09-01-preview",
            "name": "[guid(variables('uniqueHash'))]",
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', variables('cycleName'))]"
            ],
            "properties": {
                "roleDefinitionId": "[variables('contributor')]",
                "principalId": "[reference(variables('cycleName'), '2019-12-01', 'Full').identity.principalId]",
                "principalType": "ServicePrincipal"
            }
        },
        {
            "type": "Microsoft.Compute/sshPublicKeys",
            "apiVersion": "2021-11-01",
            "name": "[variables('cycleSSHKeyName')]",
            "location": "[variables('resourceLocation')]"
        }
    ],
    "outputs": {
        "SystemID1": {
            "type": "string",
            "value": "[variables('password')]"
        },
        "SystemID2": {
            "type": "string",
            "value": "[variables('cycleName')]"
        }
    }
}
